@@ -7,8 +7,3 @@ services:
 
   Cobweb\SvconnectorCsv\:
     resource: '../Classes/*'
-
-  Cobweb\SvconnectorCsv\Service\ConnectorCsv:
-    public: true
-    arguments:
-      - !tagged_iterator connector.service
